--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
   
       <div class="navbar-default">
         <ul class="nav navbar-nav">
-          <li><a href="#" (click) ="onSelect('schedule')">Schedule</a></li>
-          <li><a href="#" (click) ="onSelect('resources')">Resources</a></li>
-          <li><a href="#" (click) ="onSelect('projects')">Projects</a></li>
-          <li><a href="#" (click) ="onSelect('resources')">Groups</a></li>
+          <li><a routerLink="schedule">Schedule</a></li>
+          <li><a routerLink="resources">Resources</a></li>
+          <li><a routerLink="projects">Projects</a></li>
+          <li><a routerLink="groups">Groups</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
