--- a/src/app/resources/resource-detail/resource-detail.component.html
+++ b/src/app/resources/resource-detail/resource-detail.component.html
@@ -1,37 +1,10 @@
-<div class="row">
-    <div class="col-xs-12">
-      <img src="" alt="" class="img-respinsive">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>{{resource.name}}</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="btn-group"
-      appDropdown>
-        <button 
-        type="button"
-        class="btn btn-primary dropdown-toggle">
-        Manage Resource <span class="caret">
-          </span></button>
-          <ul class="dropdown-menu">
-            <li><a href="#">Add to Group</a></li>
-            <li><a href="#">Edit</a></li>
-            <li><a href="#">Delete</a></li>
-          </ul>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      {{resource.description}}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      Ingredients
-    </div>
-  </div>
+<!-- <p>resource-detail works!</p> -->
+<div *ngIf="resource===undefined ; else showAddResource" class="col-sm-8 bg-info text-white full-height">
+    <h3>No resource selected</h3>
+</div>
+    
+<ng-template #showAddResource>  
+    <h1>{{ ( resource | async)?.name }}</h1>
+    <h3>Notes</h3>
+    <p>{{ ( resource | async)?.note }}</p>  
+</ng-template>
