--- a/src/app/resources/resource-edit/resource-edit.component.html
+++ b/src/app/resources/resource-edit/resource-edit.component.html
@@ -1,29 +1,63 @@
-<div class="row"> 
+<!-- <div class="row"> 
     <div class="col-xs-12">
       <form>
         <div class="row">
           <div class="col-sm-5 form-group">
             <label for="name">Name</label>
+            <p>{{ ( resource | async)?.name }}</p> 
             <input 
             type="text" 
             id="name" 
-            class="form-control">
+            name="name"
+            class="form-control"
+
+          >
           </div>
           <div class="col-sm-2 form-group">
-            <label for="amount">Type</label>
+            <label for="notes">Notes</label>
+            <p>{{ ( resource | async)?.note }}</p>
             <input 
             type="text" 
-            id="group" 
-            class="form-control">
+            id="notes" 
+            class="form-control"
+           
+            > 
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success" type="submit">Add</button>
-            <button class="btn btn-danger" type="button">Remove</button>
-            <button class="btn btn-primary" type="button">Clear</button>
+            <button class="btn btn-success" type="submit">Save</button>
+            <button class="btn btn-danger" type="button">Delete</button>
           </div>
         </div>
       </form>
     </div>
-  </div>
+  </div>-->
+
+  <h1>{{ ( resource | async)?.name }}</h1>
+  <h3>Notes</h3>
+  <p>{{ ( resource | async)?.note }}</p>   
+
+  <hr><hr><hr><hr><hr>
+  <div class="container">
+    <h1>Hero Form</h1>
+    <form>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" #name id="name" required 
+        [value]="(resource | async)?.name"
+        >
+      </div>
+
+      <div class="form-group">
+        <label for="notes">Alter Ego</label>
+        <input type="text" class="form-control" #note id="notes"
+        [value]="(resource | async)?.note"
+        >
+      </div>
+
+      <button type="submit" class="btn btn-success" (click)="saveEdit(name.value, note.value)">Submit</button>
+
+    </form>
+</div>
+
