--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -33,6 +33,6 @@
 </div>
 <div class="col-sm-8 bg-info text-white full-height"><h1 class="text-center">Calendar</h1>
 
-
+<app-calendar-overview></app-calendar-overview>
 </div>
 </div>
