Async resource & calendar building issue resolved

--- a/src/app/calendar/calendar-overview/calendar-overview.component.html
+++ b/src/app/calendar/calendar-overview/calendar-overview.component.html
@@ -1,6 +1,6 @@
 <p>
   calendar-overview works!
 </p>
-    <angular2-fullcalendar [options]="calendarOptions"></angular2-fullcalendar>
+    <angular2-fullcalendar *ngIf="loadCalendar" [options]="calendarOptions"></angular2-fullcalendar>
 
 
