Adding signup & login

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
             </ul>
           </li>
         </ul>
+        <button (click)='logout()'>Sign Out</button>
       </div>
     </div>
   </nav>
