--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class="container-fluid container-full">
     <div class="col-sm-12 bg-success text-white full-height container-fluid container-full">
+        
         <router-outlet></router-outlet>
     </div>
 
 </div>
 
-<app-calendar></app-calendar>
+<!-- <app-calendar></app-calendar> -->
