--- a/src/app/calendar/calendar-overview/calendar-overview.component.html
+++ b/src/app/calendar/calendar-overview/calendar-overview.component.html
@@ -1,6 +1,10 @@
 <p>
   calendar-overview works!
 </p>
-    <angular2-fullcalendar *ngIf="loadCalendar" [options]="calendarOptions"></angular2-fullcalendar>
+<button (click)="refetch()" id="fetchButton">refetch</button>
+<div  *ngIf="loadCalendar">
+    <angular2-fullcalendar id="myCalendar" *ngIf="loadCalendar" [options]="calendarOptions" ></angular2-fullcalendar>
+</div>
+    <!-- <angular2-fullcalendar *ngIf="secondCal" [options]="calendarOptions" ></angular2-fullcalendar> -->
 
 
