--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,10 +13,10 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
-            <a href="#" class="dropdown-toggle" role="button">Account <span class="caret"></span></a>
+            <button class="dropdown-toggle" role="button">Account <span class="caret"></span></button>
             <ul class="dropdown-menu">
-              <li><a href="#">xxx</a></li>
-              <li><a href="#">yyy</a></li>
+              <li><a href="#">My Account</a></li>
+              <li><a href="" (click)='logout()'>Sign Out</a></li>
             </ul>
           </li>
         </ul>
