--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
           <li class="dropdown" appDropdown>
             <button class="dropdown-toggle" role="button">Account <span class="caret"></span></button>
             <ul class="dropdown-menu">
-              <li><a href="#">My Account</a></li>
+              <li><a routerLink="user-profile">My Account</a></li>
               <li><a href="" (click)='logout()'>Sign Out</a></li>
             </ul>
           </li>
