--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,27 +1,27 @@
-<div *ngIf="auth.user | async; then authenticated else guest">
-  <!-- template will replace this div -->
-</div>
+<!-- <div *ngIf="auth.user | async; then authenticated else guest">
+  template will replace this div
+</div> -->
 
 
 <!-- User NOT logged in -->
-<ng-template #guest>
+<!-- <ng-template #guest>
 <h3>Howdy, GUEST</h3>
 <p>Login to get started...</p>
 
-<button (click)="auth.googleLogin()">
-  <i class="fa fa-google"></i> Connect Google
-</button>
+<register-page></register-page>
 
-</ng-template>
+</ng-template> -->
 
 
 <!-- User logged in -->
-<ng-template #authenticated>
+<!-- <ng-template #authenticated></ng-template> -->
 <div *ngIf="auth.user | async as user">
-  <h3>Howdy, {{ user.displayName }}</h3>
+  <h3>Howdy, {{ user.email }}</h3>
   <img  [src]="user.photoURL">
-  <p>UID: {{ user.uid }}</p>
-  <p>Favorite Color: {{ user?.favoriteColor }} </p>
+  <!-- <p>UID: {{ user.uid }}</p> -->
+  <h2>Company Key </h2>
+  <p>{{ user?.company }} </p>
+  <p>Use this key to register new accounts with this company</p>
   <button (click)="auth.signOut()">Logout</button>
 </div>
-</ng-template>
+<!-- </ng-template> -->
