--- a/src/app/groups/group-add/group-add.component.html
+++ b/src/app/groups/group-add/group-add.component.html
@@ -1,3 +1,14 @@
-<p>
-  group-add works!
-</p>
+<div class="col-sm-8 bg-info text-white full-height">
+  <form>
+      <div class="form-group">
+        <label for="name">Group Name</label>
+        <input type="text" [(ngModel)] = "name" class="form-control" name="name" placeholder = "Name...">
+      </div>
+      <div class="form-group">
+        <label for="note">Notes</label>
+        <textarea [(ngModel)]="note" class="form-control" id="note" rows="3" name="note" placeholder="Notes..."></textarea>
+        <small id="notesInfo" class="form-text text-muted">Add some notes about this resource group</small>
+      </div>
+      <button type="submit" class="btn btn-primary" value="Add a group" (click)="addGroup(name, note)">Save</button>
+    </form>
+</div>
