--- a/src/app/resources/resource-add/resource-add.component.html
+++ b/src/app/resources/resource-add/resource-add.component.html
@@ -9,6 +9,13 @@
               <textarea [(ngModel)]="note" class="form-control" id="note" rows="3" name="note" placeholder="Notes..."></textarea>
               <small id="notesInfo" class="form-text text-muted">Add some notes about this resource</small>
             </div>
-            <button type="submit" class="btn btn-primary" value="Add a resource" (click)="addPost(name, note)">Save</button>
+            <div class="form-group">
+                <label for="group">Group</label>
+            <select #group>
+              <option name="group" *ngFor="let group of groups | async" [value]="group.data.name">{{group.data.name}}</option>
+          </select>
+          </div>
+          <div class="form-group"></div>
+            <button type="submit" class="btn btn-primary" value="Add a resource" (click)="addResource(name, note, group.value)">Save</button>
           </form>
   </div>
