--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
-<div class="container-fluid container-full">
-    <div class="col-sm-12 bg-success text-white full-height container-fluid container-full">
-        
+<app-header></app-header>
+<div class="container-fluid">
         <router-outlet></router-outlet>
-    </div>
-
 </div>
-
-<!-- <app-calendar></app-calendar> -->
