--- a/src/app/resources/resource-add/resource-add.component.html
+++ b/src/app/resources/resource-add/resource-add.component.html
@@ -1,21 +1,33 @@
     <div class="col-sm-8 bg-info text-white full-height">
         <form>
+
             <div class="form-group">
               <label for="name">Resource Name</label>
               <input type="text" [(ngModel)] = "name" class="form-control" name="name" placeholder = "Name...">
             </div>
+
             <div class="form-group">
               <label for="note">Notes</label>
               <textarea [(ngModel)]="note" class="form-control" id="note" rows="3" name="note" placeholder="Notes..."></textarea>
               <small id="notesInfo" class="form-text text-muted">Add some notes about this resource</small>
             </div>
+
             <div class="form-group">
                 <label for="group">Group</label>
             <select #group>
               <option name="group" *ngFor="let group of groups | async" [value]="group.data.name">{{group.data.name}}</option>
           </select>
           </div>
+
+          <div class="form-group">
+              <label for="group">Scheduling dependency - Only allow resources from a specific group to be scheduled to this resource</label>
+          <select #schedulingDepend>
+            <option name="schedulingDepend" value="noDependencySelected">-</option>
+            <option name="schedulingDepend" *ngFor="let group of groups | async" [value]="group.data.name">{{group.data.name}}</option>
+        </select>
+        </div>
+
           <div class="form-group"></div>
-            <button type="submit" class="btn btn-primary" value="Add a resource" (click)="addResource(name, note, group.value)">Save</button>
+            <button type="submit" class="btn btn-primary" value="Add a resource" (click)="addResource(name, note, group.value, schedulingDepend.value)">Save</button>
           </form>
   </div>
